<resources>

    <!--  Shared prefs strings  -->
    <string name="language" lang="en" translatable="false">language</string>
    <string name="auth_token" lang="en" translatable="false">auth_token</string>
    <string name="patient_id" lang="en" translatable="false">patient_id</string>
    <string name="serialized_prescriptions" lang="en" translatable="false">serialized_prescriptions</string>
    <string name="serialized_diagnoses" lang="en" translatable="false">serialized_diagnoses</string>
    <string name="serialized_patient_appointments" lang="en" translatable="false">serialized_patient_appointments</string>
    <string name="serialized_doctor_appointments" lang="en" translatable="false">serialized_doctor_appointments</string>
    <string name="serialized_professions" lang="en" translatable="false">serialized_professions</string>
    <string name="serialized_booked_times" translatable="false">serialized_booked_times</string>
    <string name="serialized_all_hospitals" translatable="false">serialized_all_hospitals</string>
    <string name="prescription_id_clicked" lang="en" translatable="false">prescription_id_clicked</string>
    <string name="diagnosis_id_clicked" lang="en" translatable="false">diagnosis_id_clicked</string>
    <string name="profession_id_clicked" lang="en" translatable="false">profession_id_clicked</string>
    <string name="hospital_id_clicked" lang="en" translatable="false">hospital_id_clicked</string>
    <string name="doctor_id_clicked" lang="en" translatable="false">doctor_id_clicked</string>
    <string name="date_clicked" lang="en" translatable="false">date_clicked</string>
    <string name="hour_clicked" lang="en" translatable="false">hour_clicked</string>
    <string name="profession_name_clicked" translatable="false">profession_name_clicked</string>
    <string name="day_of_week_clicked" translatable="false">day_of_week_clicked</string>


    <!--  Welcome screen UI strings  -->
    <string name="app_name" translatable="false">OkDoc</string>
    <string name="welcome_message_first_line" lang="en">Welcome to</string>
    <string name="welcome_message_second_line" lang="en" translatable="false">OkDoc!</string>
    <string name="amka_field_message" lang="en">Enter your AMKA to proceed</string>
    <string name="get_started_button" lang="en">Get started</string>

    <!--  Profile screen UI strings  -->
    <string name="profile_full_name" lang="en">Full Name</string>
    <string name="profile_AMKA" lang="en" translatable="false">AMKA</string>
    <string name="profile_blood_type" lang="en">Blood Type</string>
    <string name="profile_family_doctor" lang="en">Family Doctor</string>

    <!--  Home screen UI strings  -->
    <string name="default_home_greeting" lang="en">👋🏻 Hi </string>
    <string name="past_diagnoses_button" lang="en">Past\nDiagnoses</string>
    <string name="prescriptions_button" lang="en">Prescriptions</string>
    <string name="view_appointments_button" lang="en">View\nAppointments</string>
    <string name="schedule_appointment_button" lang="en">Schedule\nAppointment</string>

    <!--  Diagnosis screen UI strings  -->
    <string name="doctor_specialty" lang="en">Specialty</string>
    <string name="doctor_name" lang="en" translatable="false">Doctor Name</string>
    <string name="diagnosis" lang="en">Diagnosis</string>
    <string name="prescription">Prescription</string>

    <!--  Settings screen UI strings  -->
    <string name="settings_languages" lang="en">Languages</string>
    <string name="settings_credits" lang="en" translatable="false">Credits</string>
    <string name="settings_logout" lang="en">Logout</string>

    <!--  Credits UI strings  -->
    <string name="developed_by" translatable="false">Developed by</string>
    <string name="team_members" translatable="false">
        <![CDATA[
        <u>Front-End &amp; Design</u><br></br>
        Marina Kipourou<br></br>
        Christodoulos Antoniou<br></br>
        Efstratios Bekstasiadis<br></br>
        <br></br><u>Back-End</u><br></br>
        Elena Konstantinidi<br></br>
        Mitrofanos Ntatidis<br></br>
        <br></br><u>Full Stack &amp; DevOps</u><br></br>
        Jim Skretas Kazakis<br></br>
        ]]>
    </string>

    <!--  Languages UI strings  -->
    <string name="english" lang="en">English</string>
    <string name="greek" lang="en">Greek</string>

    <!--  Share Template strings  -->
    <string name="prescription_template" translatable="false">
        Prescription: %1$s \n
        Date: %2$s \n
        Diagnosis: %3$s \n
        Dose: %4$s \n
        Duration: %5$s \n
        Doctor: %6$s
    </string>
    <string name="diagnosis_template" translatable="false">
        Diagnosis: %1$s \n
        Date: %2$s \n
        Details: %3$s \n
        Doctor: %4$s
    </string>

    <!--  Create appointment screens  -->
    <!--  Professions screen UI strings  -->
    <string name="professions" lang="en">Select Doctor Specialty</string>

    <!--  Hospitals screen UI strings  -->
    <string name="hospitals" lang="en">Select Hospital</string>

    <!--  Doctors screen UI strings  -->
    <string name="doctors" lang="en">Select Doctor</string>

    <!--  Calendar screen UI strings  -->
    <string name="select_date">Select Date</string>
    <string name="confirm">Confirm</string>

    <!--  Hours screen UI strings  -->
    <string name="select_time">Select Time</string>

    <!--  Confirmation screen UI string  -->
    <string name="confirmation">Confrimation</string>
    <string name="confirmation_text">You are about to schedule an appointment:</string>
    <string name="reason_field_message" lang="en">Reason (Optional)</string>
    <string name="cancel">Cancel</string>

    <!--  Confirmed screen UI strings-->
    <string name="confirmed">Confirmed</string>
    <string name="ok" translatable="false">OK</string>
    <string name="appointment_scheduled">Appointment scheduled\nsuccessfully!</string>

    <!--  Error screen UI strings-->
    <string name="something_went_wrong">Something went wrong :(\nPlease try again</string>
    <string name="oops" translatable="false">Oops!</string>

    <!--  Share screen UI strings  -->
    <string name="mail_to_hospital">Mail to Hospital</string>
    <string name="or">or</string>

    <!-- Placeholder text -->
    <string name="date" lang="en" translatable="false">DD/MM/YYYY</string>
    <string name="prescription_header" lang="en" translatable="false">DD/MM/YY</string>
    <string name="prescription_title" lang="en" translatable="false">Prescription Title</string>
    <string name="doctor" lang="en" translatable="false">Doctor Name - Specialty</string>
    <string name="diagnosis_text" translatable="false">Diagnosis\ndetails\ntext\nshould\nbe\nhere</string>
    <string name="assigned_medication" lang="en" translatable="false">Assigned Medication</string>
    <string name="medicine_title" lang="en" translatable="false">Medicine Title</string>
    <string name="dosage" lang="en" translatable="false">Num per day</string>
    <string name="duration" lang="en" translatable="false">Day DD/MM until Day DD/MM</string>
    <string name="patient_name" lang="en" translatable="false">patient_name</string>
    <string name="patient_last_name" lang="en" translatable="false">patient_last_name</string>
    <string name="patient_amka" lang="en" translatable="false">patient_amka</string>
    <string name="patient_blood_type" lang="en" translatable="false">patient_blood_type</string>
    <string name="patient_doctor" lang="en" translatable="false">patient_doctor</string>
    <string name="hospital_name" lang="en" translatable="false">Hospital Name</string>
    <string name="hospital_location" lang="en" translatable="false">Location</string>
    <string name="past_diagnoses" lang="en" translatable="false">Past Diagnoses</string>
    <string name="diagnoses_text" lang="en" translatable="false">Diagnosis</string>
    <string name="diagnosis_details" translatable="false">Diagnosis Details</string>
    <string name="specialty" lang="en" translatable="false">Specialty</string>
    <string name="hours" lang="en" translatable="false">HH:MM - HH:MM</string>
    <string name="time" translatable="false">9:00 am</string>
    <string name="mail_to_custom_address">Mail to custom address</string>


</resources>