<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp">


    <LinearLayout
        android:id="@+id/item_layout"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/white_border"
        android:clickable="false"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

        <TextView
            android:id="@+id/textViewDoctorName"
            style="@style/prescription_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="18dp"
            android:paddingTop="10dp"
            android:text="@string/doctor"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/rich_black_80"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/viewBorders"
            app:layout_constraintTop_toTopOf="@+id/viewBorders"
            tools:text="@string/doctor_name" />

        <TextView
            android:id="@+id/textViewDoctorSpecialty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="18dp"
            android:text="@string/doctor_specialty"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/rich_black_80"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@+id/viewBorders"
            app:layout_constraintTop_toBottomOf="@+id/textViewDoctorName" />

        <TextView
            android:id="@+id/textViewHospitalName"
            style="@style/prescription_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="18dp"
            android:paddingTop="10dp"
            android:text="@string/hospital_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/rich_black_80"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/viewBorders"
            app:layout_constraintTop_toBottomOf="@+id/textViewDoctorSpecialty" />

        <TextView
            android:id="@+id/textViewHospitalLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="18dp"
            android:text="@string/hospital_location"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/rich_black_80"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@+id/viewBorders"
            app:layout_constraintTop_toBottomOf="@+id/textViewHospitalName" />

        <TextView
            android:id="@+id/textViewDate"
            style="@style/prescription_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="18dp"
            android:paddingTop="10dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/rich_black_80"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/viewBorders"
            app:layout_constraintTop_toBottomOf="@+id/textViewHospitalLocation" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="18dp"
            android:text="@string/time"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/rich_black_80"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@+id/viewBorders"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
