<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PrescriptionFragment">

    <Button
        android:id="@+id/buttonPastDiagnoses"
        android:layout_width="310dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/mandarin_border_12dp"
        android:drawableEnd="@drawable/ic_prescription"
        android:paddingStart="40dp"
        android:paddingEnd="30dp"
        android:text="@string/prescription_header"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/rich_black_80"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="43dp"
        android:layout_height="81dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/mandarin_border_12dp"
        android:drawableStart="@drawable/ic_back_arrow"
        android:paddingHorizontal="13dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonPastDiagnoses"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    <View
        android:id="@+id/LinearLayoutPrescription"
        android:layout_width="358dp"
        android:layout_height="520dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/light_gray_border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPastDiagnoses"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/prescription_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:paddingTop="10dp"
        android:text="@string/prescription_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/rich_black_80"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
        app:layout_constraintTop_toTopOf="@+id/LinearLayoutPrescription"
        tools:text="@string/prescription_title" />

    <TextView
        android:id="@+id/textViewAssignedMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/assigned_medication"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/rich_black_80"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/LinearLayoutPrescription"
        app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
        app:layout_constraintTop_toBottomOf="@+id/fullNameDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMedicationsList"
        android:layout_width="358dp"
        android:layout_height="360dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/light_gray_border"
        app:layout_constraintBottom_toBottomOf="@+id/LinearLayoutPrescription"
        app:layout_constraintEnd_toEndOf="@+id/LinearLayoutPrescription"
        app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
        app:layout_constraintTop_toBottomOf="@+id/textViewAssignedMedication">


    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textViewDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:text="@string/doctor_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/rich_black_80"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/fullNameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:text="@string/doctor_specialty"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/rich_black_80"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
        app:layout_constraintTop_toBottomOf="@+id/textViewDoctor" />

    <Button
        android:id="@+id/buttonDiagnosis"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mandarin_border_12dp"
        android:text="@string/diagnosis"
        android:textAllCaps="false"
        android:textColor="@color/rich_black_80"
        android:textSize="14sp"
        android:layout_marginStart="110dp"
        app:layout_constraintEnd_toEndOf="@+id/LinearLayoutPrescription"
        app:layout_constraintStart_toEndOf="@+id/textViewDoctor"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>